--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -215,7 +215,7 @@
                 <div class="col-md-4">
                     <h5>Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-phone me-2"></i> +1234567890</li>
+                        <li><i class="fas fa-phone me-2"></i> 9818110430 </li>
                         <li><i class="fas fa-envelope me-2"></i> umeshtamang129@gmail.com</li>
                         <li><i class="fas fa-map-marker-alt me-2"></i> Suryabinayak, Bhaktapur, Nepal </li>
                     </ul>
